Подвел под pp страницу наша миссия

--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -48,6 +48,13 @@
             </svg>
           </a>
         </li>
+        <li class="social__item">
+          <a href="#" class="social__link">
+            <svg>
+              <use xlink:href="img/sprite.svg#phone"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
     </social>
   </aside>
