--- a/src/partials/mission.html
+++ b/src/partials/mission.html
@@ -1,154 +1,7 @@
 <section class="mission">
   <div class="container mission-container">
-    <?xml version="1.0" standalone="no"?>
-    <svg
-      class="mission-anim"
-      id="Frame1000001870-animate-svg-animate-svg"
-      viewBox="0 0 802 478"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <g clip-path="url(#clip0_730_5333)">
-        <g clip-path="url(#clip1_730_5333)">
-          <path
-            d="M1036.5 460.5H41C24.4315 460.5 11 447.069 11 430.5V-94"
-            stroke="#DE1829"
-            stroke-width="2"
-            stroke-dasharray="0,0,0,0,0,1567.130615234375"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="3.010501066218482s"
-              values="0,0,0,0,0,1567.130615234375; 0,0,0,783.5653076171875,783.5653076171875,0; 0,0,391.78265380859375,1175.3479614257812,0,0; 0,783.5653076171875,0,783.5653076171875,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="1.116038897331687s"
-            ></animate>
-          </path>
-          <path
-            d="M1056.5 440.5H61C44.4315 440.5 31 427.069 31 410.5V-65"
-            stroke="#2F2F2F"
-            stroke-width="2"
-            stroke-dasharray="0,0,0,0,0,1518.1307373046875"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="3.1552175928808204s"
-              values="0,0,0,0,0,1518.1307373046875; 0,0,0,759.0653686523438,759.0653686523438,0; 0,0,379.5326843261719,1138.5980529785156,0,0; 0,759.0653686523438,0,759.0653686523438,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="0.03012974176006465s"
-            ></animate>
-          </path>
-          <path
-            d="M1076.5 420.5H81C64.4315 420.5 51 407.069 51 390.5V-132"
-            stroke="#DE1829"
-            stroke-width="2"
-            stroke-dasharray="0,0,0,0,0,1565.130615234375"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="2.94326466993807s"
-              values="0,0,0,0,0,1565.130615234375; 0,0,0,782.5653076171875,782.5653076171875,0; 0,0,391.28265380859375,1173.8479614257812,0,0; 0,782.5653076171875,0,782.5653076171875,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="1.4374906345877625s"
-            ></animate>
-          </path>
-          <path
-            d="M1096.5 400.5H101C84.4315 400.5 71 387.069 71 370.5L71 -83"
-            stroke="#2F2F2F"
-            stroke-width="2"
-            stroke-dasharray="0,0,0,0,0,1496.130615234375"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="2.94405561535213s"
-              values="0,0,0,0,0,1496.130615234375; 0,0,0,748.0653076171875,748.0653076171875,0; 0,0,374.03265380859375,1122.0979614257812,0,0; 0,748.0653076171875,0,748.0653076171875,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="0.2883755983766821s"
-            ></animate>
-          </path>
-          <path
-            d="M1116.5 380.5H121C104.431 380.5 91 367.069 91 350.5V-99.5"
-            stroke="#DE1829"
-            stroke-width="2"
-            stroke-dasharray="0,0,0,0,0,1492.6307373046875"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="3.2104558002155095s"
-              values="0,0,0,0,0,1492.6307373046875; 0,0,0,746.3153686523438,746.3153686523438,0; 0,0,373.1576843261719,1119.4730529785156,0,0; 0,746.3153686523438,0,746.3153686523438,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="0.6183075452662418s"
-            ></animate>
-          </path>
-          <path
-            d="M1136.5 360.5H141C124.431 360.5 111 347.069 111 330.5V-45"
-            stroke="#DE1829"
-            stroke-width="2"
-            stroke-dasharray="0,0,0,0,0,1418.1307373046875"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="3.168148078884358s"
-              values="0,0,0,0,0,1418.1307373046875; 0,0,0,709.0653686523438,709.0653686523438,0; 0,0,354.5326843261719,1063.5980529785156,0,0; 0,709.0653686523438,0,709.0653686523438,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="1.179496131575327s"
-            ></animate>
-          </path>
-        </g>
-      </g>
-      <defs>
-        <clipPath id="clip0_730_5333">
-          <rect
-            width="802"
-            height="478"
-            fill="white"
-            stroke-dasharray="0,0,0,0,0,2560"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="3.004846141243625s"
-              values="0,0,0,0,0,2560; 0,0,0,1280,1280,0; 0,0,640,1920,0,0; 0,1280,0,1280,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="1.0316321332981364s"
-            ></animate>
-          </rect>
-        </clipPath>
-        <clipPath id="clip1_730_5333">
-          <rect
-            width="802"
-            height="478"
-            fill="white"
-            stroke-dasharray="0,0,0,0,0,2560"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="2.708648547941389s"
-              values="0,0,0,0,0,2560; 0,0,0,1280,1280,0; 0,0,640,1920,0,0; 0,1280,0,1280,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="0.10263929775049543s"
-            ></animate>
-          </rect>
-        </clipPath>
-      </defs>
-      <setting>
-        {"type":"shift","speed":15,"random":0.8,"shift":0.5,"size":1,"rupture":50}
-      </setting>
+    <svg class="mission-anim">
+      <use xlink:href="#mission-anim"></use>
     </svg>
 
     <div class="title-page hero-title">
