--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -66,22 +66,19 @@
   &__item {
     width: 1.042vw;
     height: 1.042vw;
+    &:not(:last-child) {
+      display: none;
+    }
   }
 
   &__link {
     width: 100%;
     height: 100%;
     svg {
-      fill: var(--light-color);
+      fill: var(--red-color);
       width: 100%;
       height: 100%;
       transition: fill 0.3s ease-out;
-    }
-
-    @include for-desktop {
-      &:hover svg {
-        fill: var(--red-color);
-      }
     }
   }
 }
