--- a/src/scss/components/_feedback.scss
+++ b/src/scss/components/_feedback.scss
@@ -4,6 +4,10 @@
     position: relative;
   }
 
+  .title-page {
+    margin-bottom: 4vw;
+  }
+
   .feedback {
     margin: 0 auto;
   }
@@ -14,7 +18,7 @@
   }
 
   .feedback-title {
-    margin-bottom: 3vw;
+    margin-bottom: 2.5vw;
   }
 
   .feedback-list {
@@ -49,7 +53,7 @@
 
   .feedback-anim {
     position: absolute;
-    top: -2vw;
+    top: -3vw;
     right: 0;
     width: 18.229vw;
     height: 22.917vw;
@@ -64,7 +68,7 @@
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    gap: 1.563vw;
+    gap: 1.7vw;
     width: 35.417vw;
   }
 
@@ -160,7 +164,7 @@
     }
 
     .feedback-title {
-      margin-bottom: 2.604vw;
+      margin-bottom: 4.604vw;
       font-size: 4.688vw;
       line-height: 8.594vw;
     }
