Подвел страницы направлений под pp

--- a/src/partials/transshipment-oils.html
+++ b/src/partials/transshipment-oils.html
@@ -11,8 +11,8 @@
             <p>
               С 2021 года компания КТТ выполняет отгрузку сортов базового масла
               следующих производителей «Роснефть», «Газпром нефть», «Танэко» и
-              других с дальнейшей отправкой на экспорт на танкерах. КТТ
-              выполняет погрузку масел исходя из индивидуальных требований и
+              других с дальнейшей отправкой на экспорт на танкерах. <br />
+              КТТ выполняет погрузку масел исходя из индивидуальных требований и
               пожеланий клиента.
             </p>
             <p>
@@ -102,129 +102,8 @@
       </div>
     </div>
 
-    <?xml version="1.0" standalone="no"?>
-    <svg
-      class="work-anim__horizontal"
-      id="Frame1000001871-animate-svg"
-      viewBox="0 0 1920 100"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <g clip-path="url(#clip0_742_5333)">
-        <line
-          y1="99"
-          x2="1920"
-          y2="99"
-          stroke="#DE1829"
-          stroke-width="2"
-          stroke-dasharray="0,0,0,0,0,1920"
-        >
-          <animate
-            attributeType="XML"
-            attributeName="stroke-dasharray"
-            repeatCount="indefinite"
-            dur="2.1575046264292923s"
-            values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-            keyTimes="0; 0.5; 0.75; 1"
-            begin="0.6902745632163076s"
-          ></animate>
-        </line>
-        <line
-          y1="79"
-          x2="1920"
-          y2="79"
-          stroke="#2F2F2F"
-          stroke-width="2"
-          stroke-dasharray="0,0,0,0,0,1920"
-        >
-          <animate
-            attributeType="XML"
-            attributeName="stroke-dasharray"
-            repeatCount="indefinite"
-            dur="2.0472878554092957s"
-            values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-            keyTimes="0; 0.5; 0.75; 1"
-            begin="0.35518051064454775s"
-          ></animate>
-        </line>
-        <line
-          y1="59"
-          x2="1920"
-          y2="59"
-          stroke="#2F2F2F"
-          stroke-width="2"
-          stroke-dasharray="0,0,0,0,0,1920"
-        >
-          <animate
-            attributeType="XML"
-            attributeName="stroke-dasharray"
-            repeatCount="indefinite"
-            dur="2.3071494031235313s"
-            values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-            keyTimes="0; 0.5; 0.75; 1"
-            begin="0.03750344298381029s"
-          ></animate>
-        </line>
-        <line
-          y1="39"
-          x2="1920"
-          y2="39"
-          stroke="#DE1829"
-          stroke-width="2"
-          stroke-dasharray="0,0,0,0,0,1920"
-        >
-          <animate
-            attributeType="XML"
-            attributeName="stroke-dasharray"
-            repeatCount="indefinite"
-            dur="2.3405387000991413s"
-            values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-            keyTimes="0; 0.5; 0.75; 1"
-            begin="0.5229242079240477s"
-          ></animate>
-        </line>
-        <line
-          y1="19"
-          x2="1920"
-          y2="19"
-          stroke="#2F2F2F"
-          stroke-width="2"
-          stroke-dasharray="0,0,0,0,0,1920"
-        >
-          <animate
-            attributeType="XML"
-            attributeName="stroke-dasharray"
-            repeatCount="indefinite"
-            dur="2.2267968667061493s"
-            values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-            keyTimes="0; 0.5; 0.75; 1"
-            begin="1.1037070118998362s"
-          ></animate>
-        </line>
-      </g>
-      <defs>
-        <clipPath id="clip0_742_5333">
-          <rect
-            width="1920"
-            height="100"
-            fill="white"
-            stroke-dasharray="0,0,0,0,0,4040"
-          >
-            <animate
-              attributeType="XML"
-              attributeName="stroke-dasharray"
-              repeatCount="indefinite"
-              dur="1.9677070436667152s"
-              values="0,0,0,0,0,4040; 0,0,0,2020,2020,0; 0,0,1010,3030,0,0; 0,2020,0,2020,0,0"
-              keyTimes="0; 0.5; 0.75; 1"
-              begin="0.27564793928806014s"
-            ></animate>
-          </rect>
-        </clipPath>
-      </defs>
-      <setting>
-        {"type":"shift","speed":21,"random":0.8,"shift":0.5,"size":1,"rupture":50}
-      </setting>
+    <svg class="work-anim__horizontal">
+      <use xlink:href="#work-anim-horizontal"></use>
     </svg>
   </div>
 
