Доработал анимацию на страницу forwarding-services, починил главную анимацию с трубой на главной странице

--- a/src/partials/forwarding-services.html
+++ b/src/partials/forwarding-services.html
@@ -34,22 +34,88 @@
           </button>
         </div>
 
-        <div class="work-images">
-          <div class="illustration-img">
-            <picture>
-              <source srcset="img/illustration.webp" type="image/webp" />
-              <img
-                loading="lazy"
-                src="img/illustration.png"
-                class="image"
-                alt="Image off"
-              />
-            </picture>
+        <div class="illustration-img">
+          <picture>
+            <source srcset="img/illustration.webp" type="image/webp" />
+            <img
+              loading="lazy"
+              src="img/illustration.png"
+              class="image"
+              alt="Image off"
+            />
+          </picture>
 
-            <svg class="work-anim">
-              <use xlink:href="#work-anim"></use>
-            </svg>
-          </div>
+          <svg class="work-anim">
+            <use xlink:href="#work-anim"></use>
+          </svg>
+
+          <span class="earth-path earth-path--1"></span>
+          <span class="earth-path earth-path--2"></span>
+          <span class="earth-path earth-path--3"></span>
+
+          <svg
+            class="earth"
+            id="Earth"
+            viewBox="0 0 893 767"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              class="path"
+              d="M123.987 409.808C45.3784 444.589 -0.754254 476.084 4.53752 495.833C14.9699 534.767 221.314 513.306 465.42 447.898C709.526 382.49 898.955 297.904 888.523 258.97C883.21 239.143 827.09 234.978 741.048 244.304"
+              stroke="#DE1829"
+              stroke-width="6.53692"
+              stroke-linecap="round"
+              stroke-dasharray="0,0,0,0,0,1253.5755615234375"
+            >
+              <animate
+                attributeType="XML"
+                attributeName="stroke-dasharray"
+                repeatCount="indefinite"
+                dur="3.8461538461538463s"
+                values="0,0,0,0,0,1253.5755615234375; 0,0,0,762.9644391059778,490.61112241745974,0; 0,0,245.30556120872987,1008.2700003147077,0,0; 0,626.7877807617188,0,626.7877807617188,0,0"
+                keyTimes="0; 0.5; 0.6956847028117048; 1"
+                begin="0.3638211224979738s"
+              ></animate>
+            </path>
+            <path
+              d="M692.024 492.644C761.962 577.143 800.357 639.188 787.007 652.538C764.88 674.666 608.977 554.638 438.789 384.45C268.6 214.261 148.573 58.3586 170.7 36.2313C183.934 22.9973 245.02 60.6124 328.394 129.396"
+              stroke="#DE1829"
+              stroke-width="5.44743"
+              stroke-linecap="round"
+              stroke-dasharray="0,0,0,0,0,1272.0325927734375"
+            >
+              <animate
+                attributeType="XML"
+                attributeName="stroke-dasharray"
+                repeatCount="indefinite"
+                dur="3.8461538461538463s"
+                values="0,0,0,0,0,1272.0325927734375; 0,0,0,729.070253971414,542.9623388020236,0; 0,0,271.4811694010118,1000.5514233724257,0,0; 0,636.0162963867188,0,636.0162963867188,0,0"
+                keyTimes="0; 0.5; 0.7134231237024329; 1"
+                begin="0.8340894900760518s"
+              ></animate>
+            </path>
+            <path
+              d="M230.507 532.296C179.172 652.915 161.043 743.519 190.402 760.469C234.234 785.776 367.324 637.319 487.665 428.882C608.007 220.445 670.029 30.9574 626.196 5.65053C601.842 -8.41063 549.932 31.1726 487.963 104.883"
+              stroke="#DE1829"
+              stroke-width="5.44743"
+              stroke-linecap="round"
+              stroke-dasharray="0,0,0,0,0,1338.35009765625"
+            >
+              <animate
+                attributeType="XML"
+                attributeName="stroke-dasharray"
+                repeatCount="indefinite"
+                dur="3.8461538461538463s"
+                values="0,0,0,0,0,1338.35009765625; 0,0,0,807.1005541376531,531.2495435185969,0; 0,0,265.6247717592984,1072.7253258969517,0,0; 0,669.175048828125,0,669.175048828125,0,0"
+                keyTimes="0; 0.5; 0.6984718140824786; 1"
+                begin="0.821811515517688s"
+              ></animate>
+            </path>
+            <setting>
+              {"type":"shift","speed":13,"random":1,"shift":0.5,"size":0.8,"rupture":45}
+            </setting>
+          </svg>
         </div>
       </div>
 
