--- a/src/scss/components/_work.scss
+++ b/src/scss/components/_work.scss
@@ -230,41 +230,38 @@
     gap: 2vw;
   }
 
-  .work-images {
+  .illustration-img {
     position: relative;
+    top: 7vw;
     right: 10vw;
-    height: auto;
-    .illustration-img {
-      position: relative;
+    width: 16.198vw;
+    height: 16.198vw;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 50%;
+      bottom: -3vw;
+      transform: translateX(-50%);
       width: 16.198vw;
-      height: 16.198vw;
-      &::after {
-        content: "";
-        position: absolute;
-        left: 50%;
-        bottom: -3vw;
-        transform: translateX(-50%);
-        width: 16.198vw;
-        height: 2.969vw;
-        background: #000000;
-        border-radius: 50%;
-        opacity: 0.26;
-        filter: blur(20.5674px);
-      }
-      img {
-        display: block;
-        width: 100%;
-        height: 100%;
-      }
+      height: 2.969vw;
+      background: #000000;
+      border-radius: 50%;
+      opacity: 0.26;
+      filter: blur(20.5674px);
+    }
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
     }
   }
 
   .work-anim {
-    position: absolute;
-    top: -10vw;
-    right: -15vw;
-    width: 100%;
-    height: 40vw;
+    top: -7vw;
+    right: -17vw;
+    width: 53vw;
+    height: 32vw;
+    transform: rotate(-360deg);
   }
 }
 
@@ -289,6 +286,41 @@
 
   .work-anim__horizontal {
     margin: 0vw 0 8vw;
+  }
+}
+
+.earth {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 27vw;
+  height: auto;
+  opacity: 0.7;
+}
+
+.earth-path {
+  position: absolute;
+  display: block;
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  z-index: 2;
+  &--1 {
+    top: 8.7vw;
+    left: -2vw;
+    background-color: var(--bg-color);
+  }
+  &--2 {
+    top: 12vw;
+    left: 1.4vw;
+    background-color: #000000;
+  }
+  &--3 {
+    top: 10.8vw;
+    right: 0.6vw;
+    background-color: #000000;
   }
 }
 
@@ -511,17 +543,15 @@
       gap: 20vw;
       margin-bottom: 30vw;
     }
-    .work-images {
+    .illustration-img {
       right: 0;
-      .illustration-img {
+      width: 40.495vw;
+      height: 40.495vw;
+      margin: 0 auto;
+      &::after {
         width: 40.495vw;
-        height: 40.495vw;
-        margin: 0 auto;
-        &::after {
-          width: 40.495vw;
-          height: 7.422vw;
-          bottom: -7vw;
-        }
+        height: 7.422vw;
+        bottom: -7vw;
       }
     }
 
@@ -530,6 +560,25 @@
       right: -25vw;
       width: 96.094vw;
       height: 77.474vw;
+    }
+
+    .earth {
+      width: 60vw;
+    }
+
+    .earth-path--1 {
+      top: 21.4vw;
+      left: -2vw;
+    }
+
+    .earth-path--2 {
+      top: 29.5vw;
+      left: 5vw;
+    }
+
+    .earth-path--3 {
+      top: 26.8vw;
+      right: 2.6vw;
     }
   }
 
@@ -764,16 +813,33 @@
       gap: 35vw;
       margin-bottom: 35vw;
     }
-    .work-images {
-      .illustration-img {
-        width: 50.667vw;
-        height: 50.667vw;
-        &::after {
-          bottom: -10vw;
-          width: 50.4vw;
-          height: 9.333vw;
-        }
+    .illustration-img {
+      width: 50.667vw;
+      height: 50.667vw;
+      &::after {
+        bottom: -10vw;
+        width: 50.4vw;
+        height: 9.333vw;
       }
+    }
+
+    .earth {
+      width: 80vw;
+    }
+
+    .earth-path--1 {
+      top: 26.4vw;
+      left: -4vw;
+    }
+
+    .earth-path--2 {
+      top: 37.5vw;
+      left: 5vw;
+    }
+
+    .earth-path--3 {
+      top: 33.8vw;
+      right: 2.6vw;
     }
 
     .work-anim {
