--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -176,7 +176,7 @@ p {
   width: 91%;
   height: 100%;
   stroke-width: 3vw;
-  //z-index: 1;
+  z-index: -1;
 
   @include tablet {
     display: none;
